<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    android:gravity="center_vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        app:cardCornerRadius="10dp"
        >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    >

                    <TextView
                        android:id="@+id/tvPurpose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"

                        android:text="@string/transactionPurpose"
                        android:textAlignment="textStart"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/transactionCategory"
                        android:textAlignment="textStart"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"

                        android:text="@string/transactionTime"
                        android:textAlignment="textStart"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="center|end"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"
                    android:text="@string/transactionAmount"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>

    </androidx.cardview.widget.CardView>
</FrameLayout>